1. Add --source to http configuration 2. Add timestamp to HTTP top banner 3. Add --log-config feature, use dictionary based configuration machinery    for logging.  Add sample files for --log-config
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@396 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -10,11 +10,17 @@ table, th, td {
     flex-direction: column;
 }
 
-.top {
+.toptitle {
     text-align: center;
     margin-bottom: 12pt;
     font-weight: bold;
     font-size: 2vw;
+}
+
+.timestamps {
+    text-align: right;
+    font-weight: normal;
+    font-size: 10pt;
 }
 
 h2, h3 {
