Improve MOP HTML display
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@420 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -23,6 +23,10 @@ table, th, td {
     font-size: 10pt;
 }
 
+.mop-details {
+    padding-left: 24pt;
+}
+
 h2, h3 {
     text-align: left;
     font-weight: bold;
