--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -10,6 +10,13 @@ table, th, td {
     flex-direction: column;
 }
 
+.top {
+    background-image: url('/resources/pydecnet.svg');
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    background-size: auto 100%;
+}
+
 .toptitle {
     text-align: center;
     margin-bottom: 12pt;
