Ensure estimated delays to remote node are >= the timer tick.
Add HTML mechanisms for table rows with lists of counters or similar
lists.  Apply this to circuit counters, node counters, MOP SysID
info. 

Add HTML for NSP and Session layer (combined display).

Correct some of the node counters.  Add missing Executor counters.
Note that a few of these are not actually counted yet (e.g., partial
routing update loss, oversized packet loss).

Add "peak connections" tracking in NSP.

Correct counting of "no resource" counter.

Adjust test suite files for the above changes.


git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@426 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -11,7 +11,7 @@ table, th, td {
 }
 
 .top {
-    background-image: url('/resources/pydecnet.svg');
+    background-image: url('pydecnet.svg');
     background-repeat: no-repeat;
     background-position: left bottom;
     background-size: auto 100%;
@@ -30,8 +30,20 @@ table, th, td {
     font-size: 10pt;
 }
 
-.mop-details {
+.tb-details, .td-col1, .td-col2 {
+    border-style: none;
+    padding: 0pt;
+}
+
+.td-col1 {
+    text-align: right;
+    padding-right: 4pt;
+}
+
+.details {
+    padding: 1pt;
     padding-left: 24pt;
+    padding-right: 3pt;
 }
 
 h2, h3 {
