A nicer node database display
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@431 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -5,6 +5,10 @@ table, th, td {
     padding: 3pt;
 }
 
+.double_right {
+    border-right: double;
+}
+
 .flex-page {
     display: flex;
     flex-direction: column;
