Add support for mobile-friendly web interface, using m/ prefix on the URLs
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@441 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -17,19 +17,19 @@ table, th, td {
 .top {
     background-image: url('pydecnet.svg');
     background-repeat: no-repeat;
-    background-position: left bottom;
-    background-size: auto 100%;
+    background-position: left top;
+    background-size: auto 75%;
 }
 
 .toptitle {
     text-align: center;
     margin-bottom: 12pt;
     font-weight: bold;
-    font-size: 2vw;
+    font-size: 20pt;
 }
 
 .timestamps {
-    text-align: right;
+    text-align: left;
     font-weight: normal;
     font-size: 10pt;
 }
@@ -53,7 +53,7 @@ table, th, td {
 h2, h3 {
     text-align: left;
     font-weight: bold;
-    font-size: 1.5vw;
+    font-size: 16pt;
     margin-top: 18pt;
     margin-bottom: 6pt;
 }
