New features: * network mapper * --chroot, --uid, --gid command line switches
Also some NSP bugfixes and workarounds for protocol violations observed 
in various other implementations, which became visible when the mapper
tried to talk to everyone out there.


git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@502 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -113,3 +113,22 @@ div.footer {
     padding: 6pt;
     padding-top: 12pt;
 }
+
+div.netmap {
+    height: 80vh;
+}
+
+span.hs3 {
+    color: black;
+}
+span.hs2 {
+    color: red;
+}
+span.hs1 {
+    color: gray;
+    font-style: italic;
+}
+span.hs0 {
+    color: gray;
+    font-style: italic;
+}
