Small mapper changes
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@503 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -50,6 +50,11 @@ table, th, td {
     padding-right: 3pt;
 }
 
+.mapdetails {
+    padding: 1pt;
+    padding-left: 6pt;
+}
+
 h2, h3 {
     text-align: left;
     font-weight: bold;
