Update DDCMP framer support to handle framers at varying MAC address, matching the current framer firmware. Change framer config to allow abbreviated mode keywords, and add "coax" as a synonym for "internal". Move pydecnet logo to the images subdirectory.
git-svn-id: svn://akdesign.dyndns.org/pydecnet/trunk/pydecnet@589 02bf3f84-b523-46f3-a765-a93b7296b289

--- a/decnet/resources/decnet.css
+++ b/decnet/resources/decnet.css
@@ -15,7 +15,7 @@ table, th, td {
 }
 
 .top {
-    background-image: url('pydecnet.svg');
+    background-image: url('images/pydecnet.svg');
     background-repeat: no-repeat;
     background-position: left top;
     background-size: auto 75%;
